--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <!-- Profile picture section start -->
 <div style="margin-top: 6%;" class="frame">
-    <img src="Animoji.png" class="profile_img" alt="Profile picture">
+    <img src="resources/Animoji.png" class="profile_img" alt="Profile picture">
 </div>
 <!-- Profile picture section end -->
 
@@ -31,22 +31,22 @@
 <!-- Svg icons from: https://fontawesome.com/ -->
 <div class="social">
     <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
-        <img class="social_icon" src="linkedin-icon.svg" alt="Linkedin"/>
+        <img class="social_icon" src="resources/svg/linkedin-icon.svg" alt="Linkedin"/>
         <!--            <object type="image/svg+xml" data="linkedin-icon.svg" width="5%" height="5%">-->
         <!--            </object>-->
     </a>
     <a href="https://github.com/cyprienroche" target="_blank">
-        <img class="social_icon" src="github-icon.svg" alt="Github"/>
+        <img class="social_icon" src="resources/svg/github-icon.svg" alt="Github"/>
         <!--            <object type="image/svg+xml" data="github-icon.svg" width="5%" height="5%">-->
         <!--            </object>-->
     </a>
     <a href="https://twitter.com/cyprienroche" target="_blank">
-        <img class="social_icon" src="twitter-icon.svg" alt="Twitter"/>
+        <img class="social_icon" src="resources/svg/twitter-icon.svg" alt="Twitter"/>
         <!--            <object type="image/svg+xml" data="twitter-icon.svg" width="5%" height="5%">-->
         <!--            </object>-->
     </a>
-    <a href="CyprienRocheCV.pdf" target="_blank">
-        <img class="social_icon" src="cv-icon.svg" alt="CV"/>
+    <a href="resources/CyprienRocheCV.pdf" target="_blank">
+        <img class="social_icon" src="resources/svg/cv-icon.svg" alt="CV"/>
         <!--            <object type="image/svg+xml" data="twitter-icon.svg" width="5%" height="5%">-->
         <!--            </object>-->
     </a>
