use percentage instead of pixel for font

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <p class="hey">
         <strong>Hey!</strong>
     </p>
-    <p>
+    <p class="name">
         I'm <strong>Cyprien Roche</strong>, a <em>Software Engineer</em>.
     </p>
     <p class="description">
@@ -31,24 +31,21 @@
 <!-- Svg icons from: https://fontawesome.com/ -->
 <div class="social">
     <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
-        <img class="social_icon" src="resources/svg/linkedin-icon.svg" alt="Linkedin"/>
-        <!--            <object type="image/svg+xml" data="linkedin-icon.svg" width="5%" height="5%">-->
-        <!--            </object>-->
+        <object type="image/svg+xml" data="resources/svg/linkedin-icon.svg">
+        </object>
     </a>
     <a href="https://github.com/cyprienroche" target="_blank">
-        <img class="social_icon" src="resources/svg/github-icon.svg" alt="Github"/>
-        <!--            <object type="image/svg+xml" data="github-icon.svg" width="5%" height="5%">-->
-        <!--            </object>-->
+        <object type="image/svg+xml" data="resources/svg/github-icon.svg">
+        </object>
     </a>
     <a href="https://twitter.com/cyprienroche" target="_blank">
-        <img class="social_icon" src="resources/svg/twitter-icon.svg" alt="Twitter"/>
-        <!--            <object type="image/svg+xml" data="twitter-icon.svg" width="5%" height="5%">-->
-        <!--            </object>-->
+        <object type="image/svg+xml" data="resources/svg/twitter-icon.svg">
+        </object>
     </a>
     <a href="resources/CyprienRocheCV.pdf" target="_blank">
-        <img class="social_icon" src="resources/svg/cv-icon.svg" alt="CV"/>
-        <!--            <object type="image/svg+xml" data="twitter-icon.svg" width="5%" height="5%">-->
-        <!--            </object>-->
+        <!--        <img class="social_icon" src="resources/svg/cv-icon.svg" alt="CV"/>-->
+        <object type="image/svg+xml" data="resources/svg/cv-icon.svg">
+        </object>
     </a>
 </div>
 <!-- Contacts section end -->
