replace svg with png

--- a/index.html
+++ b/index.html
@@ -31,21 +31,16 @@
 <!-- Svg icons from: https://fontawesome.com/ -->
 <div class="social">
     <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
-        <object type="image/svg+xml" data="resources/svg/linkedin-icon.svg">
-        </object>
+        <img src="resources/png/linkedin-icon.png" class="social_icon">
     </a>
     <a href="https://github.com/cyprienroche" target="_blank">
-        <object type="image/svg+xml" data="resources/svg/github-icon.svg">
-        </object>
+        <img src="resources/png/github-icon.png" class="social_icon">
     </a>
     <a href="https://twitter.com/cyprienroche" target="_blank">
-        <object type="image/svg+xml" data="resources/svg/twitter-icon.svg">
-        </object>
+        <img src="resources/png/twitter-icon.png" class="social_icon">
     </a>
     <a href="resources/CyprienRocheCV.pdf" target="_blank">
-        <!--        <img class="social_icon" src="resources/svg/cv-icon.svg" alt="CV"/>-->
-        <object type="image/svg+xml" data="resources/svg/cv-icon.svg">
-        </object>
+        <img src="resources/png/cv-icon.png" class="social_icon">
     </a>
 </div>
 <!-- Contacts section end -->
