add comment to html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 
 <body>
-<!-- particle background start -->
+<!-- Particle background start -->
+<!-- Source: https://vincentgarreau.com/particles.js/ -->
 <div id="particles-js"></div>
-<!-- particle background end -->
+<!-- Particle background end -->
 
 <!-- Profile picture section start -->
 <div style="margin-top: 6%;" class="frame">
