change color of software engineer

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <strong>Hey!</strong>
     </p>
     <p class="name">
-        I'm <strong>Cyprien Roche</strong>, a <em>Software Engineer</em>.
+        I'm <strong>Cyprien Roche</strong>, a <em style="color: #a00000">Software Engineer</em>.
     </p>
     <p class="description">
         Always looking for extraordinary software ideas, I want to design and build programs to improve our daily lives.
