remove line at bottom of social icons

--- a/index.html
+++ b/index.html
@@ -35,23 +35,27 @@
 <!-- Contacts section start -->
 <!-- Svg icons from: https://fontawesome.com/ -->
 <div class="social">
-    <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
-        <img src="resources/png/linkedin-icon.png" class="social_icon">
-    </a>
-    <a href="https://github.com/cyprienroche" target="_blank">
-        <img src="resources/png/github-icon.png" class="social_icon">
-    </a>
-    <a href="https://twitter.com/cyprienroche" target="_blank">
-        <img src="resources/png/twitter-icon.png" class="social_icon">
-    </a>
-    <a href="resources/CyprienRocheCV.pdf" target="_blank">
-        <img src="resources/png/cv-icon.png" class="social_icon">
-    </a>
+        <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
+            <img src="resources/png/linkedin-icon.png" class="social_icon" alt="Linkedin">
+        </a>
+
+        <a href="https://github.com/cyprienroche" target="_blank">
+            <img src="resources/png/github-icon.png" class="social_icon" alt="Github">
+        </a>
+
+        <a href="https://twitter.com/cyprienroche" target="_blank">
+            <img src="resources/png/twitter-icon.png" class="social_icon" alt="Twitter">
+        </a>
+
+        <a href="resources/CyprienRocheCV.pdf" target="_blank">
+            <img src="resources/png/cv-icon.png" class="social_icon" alt="CV">
+        </a>
+
 </div>
 <!-- Contacts section end -->
 
 <script type="text/javascript">
-    particlesJS("particles-js",{
+    particlesJS("particles-js", {
         "particles": {
             "number": {
                 "value": 80,
