set about div to fix px

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!-- Profile picture section end -->
 
 <!-- About Me section start -->
-<div class="about">
+<div style="margin-bottom: 4%" class="about">
     <p class="hey">
         <strong>Hey!</strong>
     </p>
