--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         I'm <strong>Cyprien Roche</strong>, a <em style="color: #a00000">Software Engineer</em>.
     </p>
     <p class="description">
-        Always looking for fun software ideas, I want to design and build programs to improve our daily lives.
+        I am passionate about understanding meaningful problems, designing innovative solutions and developing tangible applications while collaborating with cross-functional teams.
     </p>
 </div>
 <!-- About Me section end -->
