add good morning/afternoon/evening depending on time of day

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- About Me section start -->
 <div style="margin-bottom: 4%" class="about">
     <p class="hey">
-        <strong>Hey!</strong>
+        <strong><label id="lblGreetings"></label></strong>
     </p>
     <p class="name">
         I'm <strong>Cyprien Roche</strong>, a <em style="color: #a00000">Software Engineer</em>.
@@ -53,6 +53,23 @@
 
 </div>
 <!-- Contacts section end -->
+
+<script>
+    var myDate = new Date();
+    var hrs = myDate.getHours();
+
+    var greet;
+
+    if (hrs < 12)
+        greet = 'Good Morning';
+    else if (hrs >= 12 && hrs <= 18)
+        greet = 'Good Afternoon';
+    else if (hrs >= 18 && hrs <= 24)
+        greet = 'Good Evening';
+
+    document.getElementById('lblGreetings').innerHTML = greet;
+</script>
+
 
 <script type="text/javascript">
     particlesJS("particles-js", {
