change description to Imperial College London and adjust positioning

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 <!-- Profile picture section end -->
 
 <!-- About Me section start -->
-<div style="margin-bottom: 4%" class="about">
+<div style="margin-bottom: 4%; margin-top: -2%" class="about">
     <p class="hey">
         <strong><label id="lblGreetings"></label></strong>
     </p>
     <p class="name">
-        I'm <strong>Cyprien Roche</strong>, a <em style="color: #a00000">Software Engineer</em>.
+        I'm <strong>Cyprien Roche</strong>, a Computer Science Student at <em style="color: #a00000">Imperial College London</em>.
     </p>
     <p class="description">
         I am passionate about understanding meaningful problems, designing innovative solutions and developing tangible applications while collaborating with cross-functional teams.
