add header tags to show preview on Linkedin

--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <title>Cyprien Roche</title>
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="particles.js"></script>
+
+    <meta property='og:title' content='My personal website'/>
+    <meta property='og:description' content='My personal website'/>
+    <meta property='og:image' content='resources/Preview.png'/>
+    <meta property='og:url' content='https://www.doc.ic.ac.uk/~cr618/'/>
+    <meta property="og:type" content='website' />
+    
 </head>
 
 <body>
