update description for Linkedin preview

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <script type="text/javascript" src="particles.js"></script>
 
     <meta property='og:title' content='My personal website'/>
-    <meta property='og:description' content='My personal website'/>
+    <meta property='og:description' content='Here you can find my CV as well as links to my Linkedin, Twitter and GitHub accounts.'/>
     <meta property='og:image' content='resources/Preview.png'/>
     <meta property='og:url' content='https://www.doc.ic.ac.uk/~cr618/'/>
     <meta property="og:type" content='website' />
-    
+
 </head>
 
 <body>
