add author name for Linkedin preview

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property='og:image' content='resources/Preview.png'/>
     <meta property='og:url' content='https://www.doc.ic.ac.uk/~cr618/'/>
     <meta property="og:type" content='website' />
+    <meta name="author" content="Cyprien Roche">
 
 </head>
 
