capitalise content type for Linkedin preview

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property='og:description' content='Here you can find my CV as well as links to my Linkedin, Twitter and GitHub accounts.'/>
     <meta property='og:image' content='resources/Preview.png'/>
     <meta property='og:url' content='https://www.doc.ic.ac.uk/~cr618/'/>
-    <meta property="og:type" content='website' />
+    <meta property="og:type" content='Website' />
     <meta name="author" content="Cyprien Roche">
 
 </head>
