use software instead of application in description

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         I'm <strong>Cyprien Roche</strong>, a Computer Science Student at <em style="color: #a00000">Imperial College London</em>.
     </p>
     <p class="description">
-        I am passionate about understanding meaningful problems, designing innovative solutions and developing tangible applications while collaborating with cross-functional teams.
+        I am passionate about understanding meaningful problems, designing innovative solutions and developing tangible software while collaborating with cross-functional teams.
     </p>
 </div>
 <!-- About Me section end -->
