--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- About Me section start -->
     <div class="about">
         <p class="name"> <strong>Cyprien Roche</strong></p>
-        <p class="description">Product Manager Intern at Microsoft, working on Cortana in Windows.</p>
+        <p class="description">On a mission to simplifying people's lives by building intuitive software products.</p>
     </div>
     <!-- About Me section end -->
 
