add link to feedback form page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- About Me section start -->
     <div class="about">
         <p class="name"> <strong>Cyprien Roche</strong></p>
-        <p class="description">On a mission to simplifying people's lives by building intuitive software products.</p>
+        <p class="description">On a mission to simplifying people's lives by building intuitive to use software products.</p>
     </div>
     <!-- About Me section end -->
 
@@ -43,9 +43,11 @@
     </div>
     <!-- Contacts section end -->
 
+    <!-- Feedback Link section start -->
+    <div class="feedback">
+        <p><a href="form.html">Cyprien's Feedback Form</a></p>
     </div>
-    <!-- Contacts section end -->
-
+    <!-- Feedback Link section end -->
 
     <script type="text/javascript">
         particlesJS("particles-js", {
