--- a/feedback/index.html
+++ b/feedback/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Cyprien Roche</title>
-    <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="particles.js"></script>
+    <link rel="stylesheet" href="../styles.css">
+    <script type="text/javascript" src="../particles.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     &nbsp
     <!-- Go back section start -->
     <div class="back">
-        <a href="index.html">Back to the main page</a>
+        <a href="../index.html">Back to the main page</a>
     </div>
 
     <!-- Go back section end -->
