--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- Feedback Link section start -->
     <div class="feedback">
-        <p><a href="feedback/index.html">Cyprien's Feedback Form</a></p>
+        <p><a href="feedback/">Cyprien's Feedback Form</a></p>
     </div>
     <!-- Feedback Link section end -->
 
