--- a/feedback/index.html
+++ b/feedback/index.html
@@ -15,7 +15,7 @@
     &nbsp
     <!-- Go back section start -->
     <div class="back">
-        <a href="../index.html">Back to the main page</a>
+        <a href="../">Back to the main page</a>
     </div>
 
     <!-- Go back section end -->
