--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 
 <head>
-    <title>Cyprien Roche</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Cyprien Roche</title>
     <script type="text/javascript" src="particles.js"></script>
 
     <meta property='og:title' content='My personal website' />
-    <meta property='og:description' content='Here you can find links to my Linkedin and GitHub accounts.' />
+    <meta property='og:description' content='Here you can find out more about my background.' />
     <meta property='og:image' content='resources/Preview.png' />
     <meta property='og:url' content='https://cyprienroche.github.io/' />
     <meta property="og:type" content='Website' />
     <meta name="author" content="Cyprien Roche">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -20,40 +21,180 @@
     <!-- Source: https://vincentgarreau.com/particles.js/ -->
     <div id="particles-js"></div>
     <!-- Particle background end -->
-    &nbsp
-    <!-- About Me section start -->
-    <div class="about">
-        <p class="name"> <strong>Cyprien Roche</strong></p>
-        <p class="description">On a mission to simplifying people's lives by building intuitive to use software products.</p>
+    <!-- Container start -->
+    <div class="container">
+        <!-- Into section start -->
+        <div class="section" style="margin-bottom: 3em;">
+            <div style="display: flex; align-items: baseline; margin-bottom: 0.5em;">
+                <h1>Cyprien Roche</h1>
+                <p>, Product Manager at Selectra</p>
+            </div>             
+            <div class="content">
+                <p>I am on a mission to simplify people's lives by building intuitive to use software products</p>
+            </div>
+        </div>
+        <!-- Intro section end -->
+        <!-- Education section start -->
+        <div class="section">
+            <h2>Education</h2>
+            <!-- ICL sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Imperial College London</h3>
+                    <h4>London, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Master of Engineering, Computing</h4>
+                    <h4>Sep 2018 – Jul 2022</h4>
+                </div>
+                <div class="content">
+                    <p>I studied computer science at Imperial College. My favourite module was Human-Centred Design. I developed a web application for a charity by applying the skills I learnt from this module. Our group ranked 2nd out of 48 when presenting our project to designers from the Royal College of Art.</p>
+                    <p>I took a course from the Dyson School of Design Engineering during which I collaborated with 50 other students as one consultancy firm. Our task was to design a scalable Mars settlement that would grow from 1,000 to 10,000 occupants and presented it to a consortium of parties from the Space Industry.</p>
+                    <p>I started Spanish by taking evening classes during my time at Imperial College. By my third year, I had progressed fast enough to be allowed to spend my final year in Spain.</p>
+                    <p>I took part in the “Mums and Dads” scheme where I advised and organised social events for a group of first year students.</p>
+                    <p>I was a member of the Department of Computing Society as well as the Salsa and Bachata society.</p>
+                </div>
+            </div>
+            <!-- ICL sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- UPM sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Universidad Politecnica de Madrid</h3>
+                    <h4>Madrid, Spain</h4>
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>European Master in Software Engineering</h4>
+                    <h4>Sep 2021 – Jul 2022</h4>
+                </div>
+                <div class="content">
+                    <p>I took part in a year-long Erasmus exchange in Madrid with the UPM. I particularly enjoyed the Fundamentals of Business Administration, Requirements Engineering, and Agile Methods for Software Development modules.</p>
+                </div>
+            </div>
+            <!-- UPM sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- Charterhouse sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Charterhouse school</h3>
+                    <h4>Godalming, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Cambridge Pre-U</h4>
+                    <h4>Sep 2013 – Jul 2018</h4>
+                </div>
+                <div class="content">
+                    <p>I played the trumpet and the piano as a music scholar at Charterhouse School. I was the first trumpet in the symphonic orchestra. I was part of the chapel choir, performing every Sunday in front of the whole school. We went on a tour and performed in Venice and Rome. I was a member of the Jazz Band, with which I went to Malta.</p>
+                    <p>I was a House Culture Monitor and led the annual house art competition where we came second out of fourteen houses. I was the Head of Perception Society which organised weekly speeches by leading researchers with a focus on neurosciences. The most memorable event was by Prof Geraint Rees from UCL who presented his research on cognitive neurology.</p>
+                    <p>I practised karate in the Shotokan Karate style and was awarded a black belt after five years of training. I completed a 50 miles walk in 16 hours.</p>
+                    <p>I was awarded two academic scholarship prizes: the Senior and the Additional Scholarship. The latter being awarded to only 3 students in their final year.</p>
+                </div>
+            </div>
+            <!-- Charterhouse sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- YK Pao sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>YK Pao School</h3>
+                    <h4>Shanghai, China</h4>
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Exchange student</h4>
+                    <h4>Mar 2015 – Mar 2015</h4>
+                </div>
+                <div class="content">
+                    <p>I was selected for a two-week exchange program between Charterhouse School and YK Pao School in Shanghai. I embraced first-hand the Chinese academic life and experienced different educational methods whilst being introduced to Mandarin.</p>
+                    <p>I would spend my weekdays at the school, where I shared a room with 3 local boys my age. I fully immersed myself in the day-to-day life of a student at YK Pao School, from the traditional meals to the afternoon activities. During my time there, I was part of the sprint team in the athletics club and attended training every day. </p>
+                    <p>I also witnessed the poverty of rural areas and learnt about the history of Shanghai as I was guided by my host family through narrow streets, where beautiful temples and colossal shopping malls contrasted with swarming slums.</p>
+                </div>
+            </div>
+            <!-- YK Pao sub-section end -->
+            <div class="sub-section divider"></div>
+        </div>
+        <!-- Education section end -->
+        <!-- Experience section start -->
+        <div class="section">
+            <h2>Experience</h2>
+            <!-- Selectra sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Selectra</h3>
+                    <h4>Lyon, France</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    Selectra provides comparison and subscription services for managing utility contracts
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Product Manager</h4>
+                    <h4>Sep 2022 - present</h4>
+                </div>
+                <div class="content">
+                    <p>I am part of the Integration squad at Selectra and our mission is to enable engineering squads to achieve more. We do so by providing them with simple and standardized APIs we build ourselves, abstracting the complexity and unreliability of external APIs in the energy industry. I directly collaborate with technical clients and partners, such as Enedis or GRDF, to obtain access to APIs, improve them by raising bugs, and build a strong relationship to improve the integration between our systems.</p>
+                    <p>I am responsible for defining and measuring success for our APIs, which I then translate into KPIs that I track every day to assess our impact. I make sure everyone understands the vision, that the squad is in direct contact with stakeholders, and that there is a short feedback loop in terms of frequent delivery to our users.</p>
+                    <p>I continuously meet with our users to emphasize with them and to understand their motivations by asking "why". This helps me identify a theme and define a clear problem to be solved, which I translate into user stories with acceptance criteria, and hypotheses to be tested. When the problem requires a creative solution, I use "How might we" statements and the jobs-to-be-done framework and I invite the whole team to ideate together.</p>
+                    <p>I then build, refine, and prioritize our backlog to best achieve our goals and deliver value rapidly. The hardest part of my job is saying "no", deciding what not to build and assuming the consequences of that decision. I seek feedback from our users as early as possible with rapid testing of ideas. I work closely with software engineers and drive story mapping workshops.</p>
+                </div>
+            </div>
+            <!-- Selectra sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- Microsoft sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Microsoft</h3>
+                    <h4>London, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    Microsoft provides cloud services, computer software and hardware, and other digital services
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Product Manager Intern</h4>
+                    <h4>Apr 2021 - Sep 2021</h4>
+                </div>
+                <div class="content">
+                    <p>I contributed to the development of a new voice-based assistive technology for people with mobility impairments, which simplifies common flows across applications on Windows.</p>
+                    <p>I led a user study to validate our product hypotheses, where I requested participants to think out loud while performing tasks with a prototype in order to understand their thought process and behaviors. I collaborated with a user research expert to design, run, and analyze the results from the study. I kept stakeholders up to date and discussed crucial decisions with them. Using results from the study, I suggested improvements to the design and encouraged the team to rethink the product vision.</p>
+                    <p>I conducted a competitive analysis on speech recognition software designed for people with reduced mobility. I researched key product features and gathered information on each company, mapping the competitive landscape of speech recognition products on Windows. I identified potential opportunities for Microsoft and developed a new product strategy using the analysis to backup my recommendations.</p>
+                    <p>Alongside a QA test analyst, I triaged defects on Cortana weekly. I prioritized bugs, directed them to the right development teams, and replied to partners when necessary.</p>
+                    <p>I also coordinated ongoing experimentations of new features on Edge, ensuring feature teams had a hypothesis that could be validated with data and gave an update on each experiment during the Edge weekly meeting. I collaborated with PMs and Engineers to ensure no team was blocked and that experiments ran smoothly.</p>
+                </div>
+            </div>
+            <!-- Microsoft sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- R3 sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>R3</h3>
+                    <h4>London, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    R3 provides software platforms designed for organizations in regulated markets
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Solutions Engineer Intern</h4>
+                    <h4>Jun 2020 - Sep 2020</h4>
+                </div>
+                <div class="content">
+                    <p>I created a distributed ledger application on Corda connecting energy producers to utility providers through the tokenisation of Renewable Energy Certificates (RECs).</p>
+                    <p>My role was to capture the current life cycle of RECs on a blockchain as a Proof of Concept that would enable R3 to initiate a conversation with relevant businesses in the renewable energy industry. </p>
+                    <p>I pitched the PoC to the head of the Industrial Business Unit and the head of the Trade and Supply Chain vertical at R3. And I connected and collaborated with the Government and Relations team to scope out regulatory compliancy in the ecosystem. </p>
+                    <p>I composed a range of technical specification documents outlining the requirements for a minimal viable product and designed a prototype user interface for each stakeholder.</p>
+                    <p>Through this project, I was able to demonstrate near-real-time settlement of RECs, automated and decentralised issuance process, and trace back to the provenance of RECs thereby increasing transparency.</p>
+                </div>
+            </div>
+            <!-- R3 sub-section end -->
+            <div class="sub-section divider"></div>
+        </div>
+        <!-- Experience section end -->
     </div>
-    <!-- About Me section end -->
+    <!-- Container end -->
 
-    <!-- Contacts section start -->
-    <!-- Svg icons from: https://fontawesome.com/ -->
-    <div class="social">
 
-        <a href="https://github.com/cyprienroche" target="_blank">
-            <img src="resources/icons/github-icon.png" class="social_icon" alt="Github">
-        </a>
-
-        <a href="https://www.linkedin.com/in/cyprienroche" target="_blank">
-            <img src="resources/icons/linkedin-icon.png" class="social_icon" alt="Linkedin">
-        </a>
-
-    </div>
-    <!-- Contacts section end -->
-
-    <!-- Feedback Link section start -->
-    <div class="feedback">
-        <p><a href="feedback/">Cyprien's Feedback Form</a></p>
-    </div>
-    <!-- Feedback Link section end -->
-
+    <!-- Particles settings start -->
     <script type="text/javascript">
         particlesJS("particles-js", {
             "particles": {
                 "number": {
-                    "value": 50,
+                    "value": 150,
                     "density": {
                         "enable": true,
                         "value_area": 800
@@ -161,6 +302,7 @@
             "retina_detect": true
         });
     </script>
+    <!-- Particles settings end -->
 </body>
 
 </html>
