Add links to sections and make wesbite adapt to screen sizes

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <h3>Imperial College London</h3>
                     <h4>London, United Kingdom</h4>
                 </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://www.imperial.ac.uk/">Imperial College</a> is a global top ten university with a world-class reputation in engineering
+                </div>
                 <div class="sub-section-title-bottom">
                     <h4>Master of Engineering, Computing</h4>
                     <h4>Sep 2018 – Jul 2022</h4>
@@ -63,6 +66,9 @@
                     <h3>Universidad Politecnica de Madrid</h3>
                     <h4>Madrid, Spain</h4>
                 </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://www.upm.es/">UPM</a> is a top university in Spain with a strong reputation in engineering
+                </div>
                 <div class="sub-section-title-bottom">
                     <h4>European Master in Software Engineering</h4>
                     <h4>Sep 2021 – Jul 2022</h4>
@@ -78,6 +84,9 @@
                 <div class="sub-section-title-top">
                     <h3>Charterhouse school</h3>
                     <h4>Godalming, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://www.charterhouse.org.uk/">Charterhouse</a> is one of the UK’s leading independent boarding school
                 </div>
                 <div class="sub-section-title-bottom">
                     <h4>Cambridge Pre-U</h4>
@@ -97,6 +106,9 @@
                 <div class="sub-section-title-top">
                     <h3>YK Pao School</h3>
                     <h4>Shanghai, China</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://www.ykpaoschool.cn/">YK Pao</a> is a pioneering international Chinese school
                 </div>
                 <div class="sub-section-title-bottom">
                     <h4>Exchange student</h4>
@@ -122,7 +134,7 @@
                     <h4>Lyon, France</h4>
                 </div>
                 <div class="sub-section-title-middle">
-                    Selectra provides comparison and subscription services for managing utility contracts
+                    <a href="https://selectra.info/">Selectra</a> provides comparison and subscription services for managing utility contracts
                 </div>
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager</h4>
@@ -144,7 +156,7 @@
                     <h4>London, United Kingdom</h4>
                 </div>
                 <div class="sub-section-title-middle">
-                    Microsoft provides cloud services, computer software and hardware, and other digital services
+                    <a href="https://www.microsoft.com/">Microsoft</a> provides cloud services, computer software and hardware, and other digital services
                 </div>
                 <div class="sub-section-title-bottom">
                     <h4>Product Manager Intern</h4>
@@ -167,7 +179,7 @@
                     <h4>London, United Kingdom</h4>
                 </div>
                 <div class="sub-section-title-middle">
-                    R3 provides software platforms designed for organizations in regulated markets
+                    <a href="https://r3.com/">R3</a> provides software platforms designed for organizations in regulated markets
                 </div>
                 <div class="sub-section-title-bottom">
                     <h4>Solutions Engineer Intern</h4>
@@ -182,6 +194,49 @@
                 </div>
             </div>
             <!-- R3 sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- Teaching Assistant sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>Imperial College London</h3>
+                    <h4>London, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://www.imperial.ac.uk/">Imperial College</a> is a global top ten university with a world-class reputation in engineering
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Undergraduate Teaching Assistant</h4>
+                    <h4>Oct 2020 - Jun 2020</h4>
+                </div>
+                <div class="content">
+                    <p>I was the superhero flying around the labs in the Department of Computing, rescuing first years stuck on their weekly assignments.</p>
+                    <p>I sat with them until we found a solution and encouraged them to lead the discussion. My role was to guide them back onto the right track while providing clarifications regarding their assignment.</p>
+                    <p>Occasionally, I recommended alternative approaches that solved the same problem resulting in simpler code. I enjoyed most offering suggestions in taking the exercise further and making it more fun, whether it'd be implementing an additional encryption algorithm from scratch or only using java streams to complete the assignment.</p>
+                </div>
+            </div>
+            <!-- Teaching Assistant sub-section end -->
+            <div class="sub-section divider"></div>
+            <!-- ABB sub-section start -->
+            <div class="sub-section">
+                <div class="sub-section-title-top">
+                    <h3>ABB</h3>
+                    <h4>Milton Keynes, United Kingdom</h4>
+                </div>
+                <div class="sub-section-title-middle">
+                    <a href="https://new.abb.com/">ABB</a> is a technology leader in electrification and automation
+                </div>
+                <div class="sub-section-title-bottom">
+                    <h4>Robotics Trainee</h4>
+                    <h4>Jul 2020 - Jul 2020</h4>
+                </div>
+                <div class="content">
+                    <p>I was trained to use an IRB 2400 robot using the Industrial Robot Controller 5 (IRC5), the robotic industry’s benchmark in robot controller technology. </p>
+                    <p>I programmed the robot in RAPID, a high-level programming language used to control ABB industrial robots. I learnt about the robot's motion, it's many internal and external axes, and how to define different coordinate systems based on the task to accomplish. </p>
+                    <p>In particular, I understood how to use the Tool Coordinate System to specify a tool’s centre point and orientation when the robot was holding a work object. That way, when that tool was active, the programmed path and speed were related to the work object.</p>
+                    <p>I worked with a team of experienced technicians from the automotive industry and learnt about real-life use cases from our discussions. By the end of the training, I received an IRC5 certification.</p>
+                </div>
+            </div>
+            <!-- ABB sub-section end -->
             <div class="sub-section divider"></div>
         </div>
         <!-- Experience section end -->
